<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
            android:id="@+id/group1"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/ic_calendar"
                android:title="@string/calendar"/>
        <item
                android:id="@+id/nav_index"
                android:icon="@drawable/ic_widgets"
                android:title="@string/index"/>
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/history"/>
    </group>

    <group android:id="@+id/group2">
        <item
                android:orderInCategory="1"
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_search"
                android:title="@string/search"/>
        <item
                android:orderInCategory="1"
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
        <item
                android:orderInCategory="1"
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/logout"/>
    </group>

</menu>