<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.search.SearchActivity">

    <LinearLayout
            android:id="@+id/search_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_round_rect"
            android:backgroundTint="@color/colorTransGrey"
            android:layout_margin="12dp">

        <TextView
                android:id="@+id/item_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="24dp"
                android:paddingEnd="12dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                app:layout_constraintTop_toTopOf="@+id/search_box"
                app:layout_constraintBottom_toBottomOf="@+id/search_box"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="?colorAccent"
                tools:text="@string/subject"/>

        <soko.ekibun.bangumi.ui.view.CleanableEditText
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:singleLine="true"
                android:id="@+id/search_box"
                android:padding="12dp"
                android:background="@null"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/search_container"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:text="@string/search_history"/>

            <TextView
                    android:id="@+id/search_history_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_history_clear"
                    android:clickable="true"
                    android:padding="12dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:focusable="true"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_history"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
    </LinearLayout>

    <soko.ekibun.bangumi.ui.view.FixSwipeRefreshLayout
            android:id="@+id/search_swipe"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="12dp"
            android:background="?android:colorBackground"
            tools:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/search_container"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_list"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </soko.ekibun.bangumi.ui.view.FixSwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

